--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -321,7 +321,7 @@ main
 
 .main-slider__image
   position: absolute
-  max-width: 1060px
+  max-width: 1040px
   width: 100%
   bottom: 0
   right: 0
@@ -1101,6 +1101,10 @@ label
   right: 21px
   top: 50%
   transform: translate(0,-50%)
+  max-width: 27px
+  display: flex
+  align-items: center
+  justify-content: center
 
 .form
   max-width: 358px
