--- a/app/css/main.css
+++ b/app/css/main.css
@@ -330,7 +330,7 @@ main {
 
 .main-slider__image {
   position: absolute;
-  max-width: 1060px;
+  max-width: 1040px;
   width: 100%;
   bottom: 0;
   right: 0;
@@ -1194,7 +1194,17 @@ label {
   right: 21px;
   top: 50%;
   -webkit-transform: translate(0, -50%);
-          transform: translate(0, -50%); }
+          transform: translate(0, -50%);
+  max-width: 27px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
 
 .form {
   max-width: 358px;
@@ -1472,6 +1482,10 @@ footer {
   .gallery:before {
     left: -300px; } }
 
+@media only screen and (max-width: 1670px) {
+  .main-slider__image {
+    right: -140px; } }
+
 @media only screen and (max-width: 1470px) {
   .header-logo {
     max-width: 270px; }
@@ -1508,7 +1522,9 @@ footer {
   .gallery:before {
     left: -500px; }
   .logo-decor {
-    left: -180px; } }
+    left: -180px; }
+  .main-slider__image {
+    right: -240px; } }
 
 @media only screen and (max-width: 1360px) {
   .sales-section h2 span, .present h5 {
@@ -1519,7 +1535,8 @@ footer {
 
 @media only screen and (max-width: 1300px) {
   .main-slider__image {
-    max-width: 790px; }
+    max-width: 790px;
+    right: -70px; }
   .solution:after {
     left: 0; } }
 
@@ -1598,7 +1615,9 @@ footer {
   .slick-arrow {
     display: none; }
   .inst-photo {
-    width: 15%; } }
+    width: 15%; }
+  .main-slider__image {
+    right: -140px; } }
 
 @media only screen and (max-width: 1040px) {
   .advantages {
@@ -1635,13 +1654,15 @@ footer {
         -ms-flex-align: center;
             align-items: center; }
   .list-social {
-    margin: 0 0 0 30px; } }
+    margin: 0 0 0 30px; }
+  .main-slider__image {
+    right: -250px; } }
 
 @media only screen and (max-width: 991px) {
   .slide-title {
     font-size: 60px; }
   .main-slider__content {
-    max-width: 90%; }
+    max-width: 87%; }
   .main-slider .title-description {
     margin: 16px 0 24px;
     font-size: 30px; }
@@ -1649,7 +1670,8 @@ footer {
     font-size: 16px; }
   .main-slider__image {
     max-width: 500px;
-    height: 580px; }
+    height: 580px;
+    right: 0; }
   .logo-decor {
     display: none; }
   .video-section {
@@ -1758,7 +1780,9 @@ footer {
     margin: 19px auto 31px; }
   .callback .title-description {
     font-size: 18px;
-    margin: 0 auto 30px; } }
+    margin: 0 auto 30px; }
+  .main-slider__image {
+    right: -60px; } }
 
 @media only screen and (max-width: 710px) {
   header {
@@ -1783,7 +1807,8 @@ footer {
     overflow: hidden;
     margin: 8px 0 0;
     height: 100%;
-    max-height: 370px; }
+    max-height: 370px;
+    right: 0; }
     .main-slider__image img {
       width: 100%;
       height: 100%;
