--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -18,6 +18,10 @@
     left: -300px
 
 
+@media only screen and (max-width : 1670px)
+  .main-slider__image
+    right: -140px
+
 @media only screen and (max-width : 1470px)
   .header-logo
     max-width: 270px
@@ -69,6 +73,9 @@
   .logo-decor
     left: -180px
 
+  .main-slider__image
+    right: -240px
+
 
 @media only screen and (max-width : 1360px)
   .sales-section h2 span, .present h5
@@ -82,9 +89,12 @@
 @media only screen and (max-width : 1300px)
   .main-slider__image
     max-width: 790px
+    right: -70px
 
   .solution:after
     left: 0
+
+
 
 
 @media only screen and (max-width : 1199px)
@@ -173,6 +183,9 @@
   .inst-photo
     width: 15%
 
+  .main-slider__image
+    right: -140px
+
 @media only screen and (max-width : 1040px)
   .advantages
     padding: 26px 0 430px
@@ -214,12 +227,15 @@
   .list-social
     margin: 0 0 0 30px
 
+  .main-slider__image
+    right: -250px
+
 @media only screen and (max-width : 991px)
   .slide-title
     font-size: 60px
 
   .main-slider__content
-    max-width: 90%
+    max-width: 87%
 
   .main-slider
     .title-description
@@ -231,6 +247,7 @@
   .main-slider__image
     max-width: 500px
     height: 580px
+    right: 0
 
   .logo-decor
     display: none
@@ -367,6 +384,9 @@
     font-size: 18px
     margin: 0 auto 30px
 
+  .main-slider__image
+    right: -60px
+
 @media only screen and (max-width : 710px)
   header
     background: $accent
@@ -396,6 +416,7 @@
     margin: 8px 0 0
     height: 100%
     max-height: 370px
+    right: 0
     img
       width: 100%
       height: 100%
@@ -411,6 +432,8 @@
 
   .footer-contacts
     width: 100%
+
+
 
 
 @media only screen and (max-width : 620px)
