--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -581,7 +581,7 @@
   .footer-menu
     width: 100%
     display: flex
-    align-items: center
+    align-items: flex-start
     justify-content: space-between
     flex-wrap: wrap
     margin: 0 0 19px
