--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1418,8 +1418,10 @@ label {
   color: #8e96b2;
   font-size: 14px;
   font-weight: 300; }
-  .footer-bottom a {
+  .footer-bottom .links {
     text-decoration: underline;
+    color: #8e96b2; }
+  .footer-bottom a {
     color: #8e96b2; }
 
 .footer-text {
@@ -1573,7 +1575,7 @@ footer {
 .modal-content {
   border: none;
     border-radius: 10px;
-  padding: 37px 46px;
+  padding: 37px 46px 0;
   color: #7a7a7a;
   background: #eceef4; }
   .modal-content .description {
@@ -1621,7 +1623,7 @@ footer {
   color: #012baf; }
 
 .modal-body {
-  padding: 50px 0 0; }
+  padding: 50px 0 37px; }
 
 .necessarily {
   padding: 0 0 0 44px;
@@ -1638,6 +1640,8 @@ footer {
   right: -26px;
   top: -26px;
   opacity: 1; }
+  .close:hover, .close:focus {
+    border: none; }
 
 .modal-header .close {
   padding: 0;
@@ -1650,7 +1654,7 @@ footer {
   max-width: 554px; }
 
 #modalThanks .modal-content {
-  padding: 94px 50px 92px;
+  padding: 94px 50px 0;
   position: relative; }
   #modalThanks .modal-content:before {
     content: '';
@@ -1663,7 +1667,7 @@ footer {
       background-size: 100%; }
 
 #modalThanks .modal-body {
-  padding: 37px 0 0; }
+  padding: 37px 0 92px; }
 
 #modalThanks .description {
   margin: 0; }
@@ -2005,8 +2009,7 @@ footer {
     max-width: 100%;
     overflow: hidden;
     margin: 8px 0 0;
-    height: 100%;
-    max-height: 370px;
+    height: 374px;
     right: 0; }
     .main-slider__image img {
       width: 100%;
@@ -2093,13 +2096,13 @@ footer {
     max-width: 291px;
     margin: auto; }
   #modalThanks .modal-content {
-    padding: 69px 32px 68px; }
+    padding: 69px 32px 0; }
   #modalThanks .modal-body {
-    padding: 38px 0 0; }
+    padding: 38px 0 68px; }
   #modalThanks .description {
     font-size: 18px; }
   .modal-content {
-    padding: 28px 20px 27px; }
+    padding: 28px 20px 0; }
   .modal-header {
     margin: 0 auto; }
   .modal-content .description {
@@ -2112,7 +2115,7 @@ footer {
   .modal-content .form .checkbox {
     text-align: left; }
   .modal-body {
-    padding: 20px 0 0; }
+    padding: 20px 0 27px; }
   .modal-dialog-scrollable .modal-content {
     overflow: hidden; }
   .form-icon {
@@ -2163,18 +2166,33 @@ footer {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     margin: 0 0 19px; }
     .footer-menu li {
       width: 50%; }
       .footer-menu li:last-child {
-        margin: 0 0 10px; } }
+        margin: 0 0 10px; }
+      .footer-menu li a {
+        width: -webkit-fit-content;
+        width: -moz-fit-content;
+        width: fit-content; }
+  .footer-text:last-child {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .footer-text .links {
+    display: inline;
+    margin: 0 0 0 2px; } }
 
 @media only screen and (max-width: 360px) {
-  .main-slider__image {
-    height: 100%;
-    max-height: 210px; }
   .advice:after {
     background: url("../img/women-bg2-mob.png") no-repeat center;
       background-size: cover;
