--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -186,6 +186,13 @@
   .main-slider__image
     right: -140px
 
+  .close
+    right: 10px
+    top: 20px
+    img
+      filter: invert(1)
+
+
 @media only screen and (max-width : 1040px)
   .advantages
     padding: 26px 0 430px
