--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1366,7 +1366,7 @@ footer
   .btn
     width: 196px
     height: 52px
-    margin: 0 0 0 auto
+    margin: 0 auto
 
 .footer-top
   padding: 61px 0 52px
@@ -1518,6 +1518,8 @@ footer
   opacity: 1
   &:hover, &:focus
     border: none
+    box-shadow: none
+    outline: none
 
 .modal-header .close
   padding: 0
