--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -311,6 +311,22 @@ main
   .title-description
     margin: 45px 0 128px
     max-width: 384px
+  .slick-prev
+    left: 10px
+  .slick-next
+    right: 10px
+  .slick-arrow
+    width: 70px
+    height: 70px
+    background: rgba(#fff, .7)
+    border-radius: 50%
+    display: flex
+    align-items: center
+    justify-content: center
+    z-index: 1
+    &:hover, &:focus
+      background: rgba(#fff, .7)
+
 
 .slick-slide
   outline: none
