--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -299,13 +299,15 @@
   .gallery:before
     left: -800px
 
+  .main-slider .slick-arrow
+    display: none
+
 
 @media only screen and (max-width : 900px)
   .box-contacts__wrap
     width: 100%
     margin: 28px auto 0
-    .btn
-      margin: 0 0 0 85px
+
 
 @media only screen and (max-width : 860px)
   .header-logo
@@ -457,9 +459,6 @@
   .gallery
     padding: 71px 0 39px
 
-  .close
-    right: 0
-    top: -34px
 
   .gallery-slider__mobile
     display: block
